<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity"
    android:background="#f5f5f5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/user_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="17sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/firstName2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Manjiree"
            android:textColorHint="#9F9F9F"
            android:paddingStart="15dp"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#9F9F9F"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/user_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="17sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/lastName2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Patil"
            android:textColorHint="#9F9F9F"
            android:paddingStart="15dp"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#9F9F9F"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/call_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/mobile_number"
                android:textSize="17sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/mobileNumber2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#9F9F9F"
            android:hint="+91 7398346723"
            android:maxLines="1"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:textSize="15sp"
            android:textColorHint="#9F9F9F"
            android:fontFamily="@font/montserrat_regular"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/email_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/email_id"
                android:textSize="17sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/emailID2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#9F9F9F"
            android:hint="manjiree@gmail.com"
            android:paddingStart="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColorHint="#9F9F9F"
            android:fontFamily="@font/montserrat_regular"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#639CFF"
            android:checked="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="I agree to all terms and conditions"
            android:textColor="#5B5656"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_btn"
        android:elevation="3dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Update"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_btn"
        android:elevation="3dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Delete"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>